--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,15 @@ layout: default
 
 <header class="jumbo">
     <h1>{{ site.title }}</h1>
-    <div><em>{{ site.description }}</em></div>
+<div>
+I am passionate about creating content for the music, travel, and lifestyle industries.
+
+Need help with content marketing, blog writing, or editing? 
+<br/>
+<b>I would love to hear from you!</b>
+
+<a href="mailto:hello@amberhall.me" style="text-decoration:underline">hello@amberhall.me</a>
+</div>
 </header>
 
 {% for category in site.data.articles.categories %}
