--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,26 +27,8 @@
 </head>
 <body>
 <main>
-    <section id="main" class="flex one five-1000">
-        <aside class="full fifth-1000">
-            {% if site.logo %}
-            <div style="text-align: center">
-                <a href="{{ "/" | absolute_url }}"><img src="{{site.logo | relative_url}}" alt="Logo" style="width: 96px;padding-bottom: 32px"/></a>
-            </div>
-            {% endif %}
-            <label for="menu-toggle" id="menu-toggle-label" class="button" style="background-color: #000">&#8801;</label>
-            <input type="checkbox" id="menu-toggle">
-            <div class="flex one" id="menu">
-                {% assign sorted_pages = site.pages | sort:"order" %}
-                {% for page in sorted_pages %}
-                {% if page.title %}
-                <a class="pseudo button" style="font-size: 0.7em" href="{{ page.url }}">{{ page.title }}</a>
-                {% endif %}
-                {% endfor %}
-                <!-- <a class="pseudo button" style="font-size: 0.7em" href="https://linkedin.com/in/amber-hall-867346161">LinkedIn</a> -->
-            </div>
-        </aside>
-        <article class="full four-fifth-1000">
+    <section id="main" class="flex one three-1000">
+        <article class="full">
             {{ content }}
         </article>
     </section>
