--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -96,6 +96,16 @@ a {
     width: 100%;
     min-height: 136px !important;
   }
+
+  .hvr-fade:hover {
+    background-color: #000;
+    color: #000;
+    z-index: 1000;
+  }
+
+  .hvr-fade:hover a {
+    color: #000;
+  }
 }
 
 .hvr-fade:hover {
